syntax = "proto3";
package dto;
option java_package = "com.bestStore";
option java_multiple_files = true;

message UserCredentials{
  string id = 1;
  string email = 2;
  string password = 3;
  repeated string roles = 4;
  bool isAccountNonExpired = 5;
  bool isAccountNonLocked = 6;
  bool isCredentialsNonExpired = 7;
  bool isEnabled = 8;
}